img align fix in content-3 div

--- a/css/style.scss
+++ b/css/style.scss
@@ -234,71 +234,74 @@ footer {
   .content-2 img {
     position: absolute;
     float: right;
-    top: 2%;
+    top: 7%;
     left: 100%;
     transform: translate(0%, 0%);
+  }
+
+  .content-3 img {
+    position: absolute;
+    float: left;
+    top: 40%;
+    left: 5%;
+    height: auto;
   }
 
   .content-3 {
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1em;
-    position: relative;
     width: 65%;
     top: 10%;
     float: right;
     display: block;
-    padding-top: 5%;
-    padding-left: 5%;
+    padding-top: 15%;
     padding-right: 5%;
-
   }
-
-  .content-3 img {
-    float: left;
-  }
-
 }
-
 
 @media screen and (min-width: 1024px) {
-button {
-  display: none;
-}
+  button {
+    display: none;
+  }
 
-nav {
-  position: relative;
-  top: 0;
-  left: 0;
-  width: auto;
-  height: auto;
-  opacity: 1;
-  visibility: visible;
-  z-index: 1;
-  background-color: transparent;
-  color: white;
-}
+  nav {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: auto;
+    height: auto;
+    opacity: 1;
+    visibility: visible;
+    z-index: 1;
+    background-color: transparent;
+    color: white;
+  }
 
-ul {
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  font-family: Arial, Helvetica, sans-serif;
-}
+  ul {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+  }
 
-ul li {
-  text-transform: capitalize;
-}
+  ul li {
+    text-transform: capitalize;
+  }
 
-ul li:nth-child(1),
-ul li:nth-child(2) {
-  flex: 1 1 auto;
-  text-align: left;
-}
+  ul li:nth-child(1),
+  ul li:nth-child(2) {
+    flex: 1 1 auto;
+    text-align: left;
+  }
 
-ul li:nth-child(3),
-ul li:nth-child(4) {
-  flex: 1 1 auto;
-  text-align: right;
-}
+  ul li:nth-child(3),
+  ul li:nth-child(4) {
+    flex: 1 1 auto;
+    text-align: right;
+  }
+
+  footer {
+    display: block;
+  }
 }
